# IS

./: .gitignore
Project/: Info.txt
RTIS_Students/: CMakeLists.txt  RTIS.pro
RTIS_Students/VisualStudio2015/: VisualStudio2015.sln
RTIS_Students/VisualStudio2015/RTIS/: RTIS.vcxproj  RTIS.vcxproj.filters
RTIS_Students/output/: normalTransformExercice.txt  transformationsExercise.txt
RTIS_Students/src/: main.cpp
RTIS_Students/src/cameras/: camera.cpp  ortographic.cpp  ortographic.h  perspective.cpp
RTIS_Students/src/core/: bitmap.cpp  bitmap.h  eqsolver.h  film.cpp  film.h  filter.cpp  filter.h  matrix4x4.cpp  matrix4x4.h  ray.h  utils.cpp  utils.h  vector3d.cpp  vector3d.h
RTIS_Students/src/shapes/: shape.cpp  shape.h  sphere.cpp  sphere.h
RTIS_Students_V2_2017/: CMakeLists.txt
RTIS_Students_V2_2017/VisualStudio2015/RTIS_V2/: RTIS_V2.sln  RTIS_V2.vcxproj  RTIS_V2.vcxproj.filters  mirror.h
RTIS_Students_V2_2017/VisualStudio2015/RTIS_V2/Debug/: RTIS_V2.ilk  vc140.idb
RTIS_Students_V2_2017/VisualStudio2015/RTIS_V2/Debug/RTIS_V2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RTIS_V2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RTIS_Students_V2_2017/VisualStudio2015/RTIS_V2/x64/Debug/: RTIS_V2.ilk  vc140.idb
RTIS_Students_V2_2017/VisualStudio2015/RTIS_V2/x64/Debug/RTIS_V2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RTIS_V2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RTIS_Students_V2_2017/src/: main.cpp
RTIS_Students_V2_2017/src/core/: bitmap.cpp  bitmap.h  film.cpp  film.h  intersection.cpp  ray.cpp  ray.h  utils.cpp  vector3d.cpp  vector3d.h
RTIS_Students_V2_2017/src/lightsources/: arealightsource.cpp  arealightsource.h  lightsource.cpp  lightsource.h  volumelightsource.cpp  volumelightsource.h
RTIS_Students_V2_2017/src/materials/: material.cpp  material.h  mirror.cpp  mirror.h  phong.cpp  phong.h  transmissive.cpp  transmissive.h
RTIS_Students_V2_2017/src/shaders/: depthshader.cpp  depthshader.h  directshader.cpp  directshader.h  globalshader.cpp  globalshader.h  intersectionshader.cpp  normalshader.cpp  normalshader.h  shader.h
RTIS_Students_V2_2017/src/shapes/: infiniteplane.cpp
